# argparse-from-fn

./: Makefile  README.md  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml
fn2argparse/: __init__.py  fn2argparse.py
tests/: test_examples.py
